--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,10 @@
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #fff url(https://miro.medium.com/max/1400/1*CsJ05WEGfunYMLGfsT2sXA.gif) no-repeat center center;
+    background: #fff url(https://acegif.com/wp-content/uploads/loading-97.gif) no-repeat center center;
     z-index: 99999;
   }
-  
+
 body{
 	line-height: 1.5;
 	font-family: 'Poppins', sans-serif;
