--- a/templates/personal_loan/personal_loan_overview.html
+++ b/templates/personal_loan/personal_loan_overview.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<script>
+    $(function () {
+        $("#header").load("./header.html");
+        $("#footer").load("./footer.html");
+    });
+</script>
+
 <body>
-    <center><h1>this is  Overview</h1></center>
+
 </body>
 </html>
