--- a/templates/personal_loan_overview.html
+++ b/templates/personal_loan_overview.html
@@ -9,8 +9,8 @@
 
 <script>
     $(function () {
-        $("#header").load("./header.html");
-        $("#footer").load("./footer.html");
+        $("#header").load("../header.html");
+        $("#footer").load("../footer.html");
     });
 </script>
 
