--- a/templates/personal_loan_overview.html
+++ b/templates/personal_loan_overview.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overview Page</title>
-    
+
+    <link rel="stylesheet" href="../css/style.css">
     <!-- Jquery for adding header and footer -->
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"> </script>
@@ -22,5 +23,6 @@
 <body>
     <div id="header"></div>
     <div id="footer"></div>
+    <script src="../js/script.js"></script>
 </body>
 </html>
