--- a/templates/personal_loan_egibility_criteria.html
+++ b/templates/personal_loan_egibility_criteria.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Overview Page</title>
+
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- Jquery for adding header and footer -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"> </script>
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+
+    
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
+
 </head>
+
+<script>
+    $(function () {
+        $("#header").load("../header.html");
+        $("#footer").load("../footer.html");
+    });
+</script>
+
 <body>
-    <center>
-        <h1>Egibility Criteria</h1>
-    </center>
+    <div id="header"></div>
+    <div id="footer"></div>
+    <script src="../js/script.js"></script>
 </body>
 </html>
