--- a/templates/personal_loan_egibility_criteria.html
+++ b/templates/personal_loan_egibility_criteria.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +15,7 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-    
+
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -28,10 +29,381 @@
         $("#footer").load("../footer.html");
     });
 </script>
+<style>
+    /*--------------------------------------------------------------
+# Hero Section
+--------------------------------------------------------------*/
+    #hero {
+        width: 100%;
+        height: 70vh;
+        background: #fef8f5;
+        border-bottom: 2px solid #fcebe3;
+        margin: 72px 0 -72px 0;
+    }
+
+    #hero h1 {
+        margin: 0;
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 56px;
+        color: #4e4039;
+    }
+
+    #hero h2 {
+        color: #a08f86;
+        margin: 15px 0 0 0;
+        font-size: 24px;
+    }
+
+    #hero .btn-get-started {
+        font-family: "Raleway", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        letter-spacing: 1px;
+        display: inline-block;
+        padding: 8px 28px;
+        border-radius: 3px;
+        transition: 0.5s;
+        margin-top: 30px;
+        color: #fff;
+        background: #eb5d1e;
+    }
+
+    #hero .btn-get-started:hover {
+        background: #ef7f4d;
+    }
+
+    #hero .animated {
+        animation: up-down 2s ease-in-out infinite alternate-reverse both;
+    }
+
+    @media (max-width: 991px) {
+        #hero {
+            height: calc(100vh - 72px);
+        }
+
+        #hero .animated {
+            -webkit-animation: none;
+            animation: none;
+        }
+
+        #hero .hero-img {
+            text-align: center;
+        }
+
+        #hero .hero-img img {
+            width: 50%;
+        }
+    }
+
+    @media (max-width: 768px) {
+        #hero h1 {
+            font-size: 28px;
+            line-height: 36px;
+        }
+
+        #hero h2 {
+            font-size: 18px;
+            line-height: 24px;
+        }
+
+        #hero .hero-img img {
+            width: 70%;
+        }
+    }
+
+    @media (max-width: 575px) {
+        #hero .hero-img img {
+            width: 80%;
+        }
+    }
+
+    @media (max-height: 600px) {
+        #hero {
+            height: 120vh;
+        }
+    }
+
+    @-webkit-keyframes up-down {
+        0% {
+            transform: translateY(10px);
+        }
+
+        100% {
+            transform: translateY(-10px);
+        }
+    }
+
+    @keyframes up-down {
+        0% {
+            transform: translateY(10px);
+        }
+
+        100% {
+            transform: translateY(-10px);
+        }
+    }
+
+    /*--------------------------------------------------------------
+# Sections General
+--------------------------------------------------------------*/
+    section {
+        padding: 60px 0;
+        overflow: hidden;
+    }
+
+    .section-bg {
+        background-color: #fef8f5;
+    }
+
+    .section-title {
+        text-align: center;
+        padding-bottom: 30px;
+    }
+
+    .section-title h2 {
+        font-size: 24px;
+        font-weight: 700;
+        padding-bottom: 0;
+        line-height: 1px;
+        margin-bottom: 15px;
+        color: #c2b7b1;
+    }
+
+    .section-title p {
+        padding-bottom: 15px;
+        margin-bottom: 15px;
+        position: relative;
+        font-size: 32px;
+        font-weight: 700;
+        color: #4e4039;
+    }
+
+    .section-title p::after {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 60px;
+        height: 2px;
+        background: #eb5d1e;
+        bottom: 0;
+        left: calc(50% - 30px);
+    }
+
+    /*--------------------------------------------------------------
+# Breadcrumbs
+--------------------------------------------------------------*/
+    .breadcrumbs {
+        padding: 15px 0;
+        background-color: #fef5f1;
+        min-height: 40px;
+    }
+
+    .breadcrumbs h2 {
+        font-size: 24px;
+        font-weight: 300;
+    }
+
+    .breadcrumbs ol {
+        display: flex;
+        flex-wrap: wrap;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        font-size: 14px;
+    }
+
+    .breadcrumbs ol li+li {
+        padding-left: 10px;
+    }
+
+    .breadcrumbs ol li+li::before {
+        display: inline-block;
+        padding-right: 10px;
+        color: #6c757d;
+        content: "/";
+    }
+
+    @media (max-width: 768px) {
+        .breadcrumbs .d-flex {
+            display: block !important;
+        }
+
+        .breadcrumbs ol {
+            display: block;
+        }
+
+        .breadcrumbs ol li {
+            display: inline-block;
+        }
+    }
+
+    /*--------------------------------------------------------------
+# About
+--------------------------------------------------------------*/
+    .about h3 {
+        font-weight: 700;
+        font-size: 34px;
+        color: #4e4039;
+    }
+
+    .about h4 {
+        font-size: 20px;
+        font-weight: 700;
+        margin-top: 5px;
+        color: #7a6960;
+    }
+
+    .about i {
+        font-size: 48px;
+        margin-top: 15px;
+        color: #f39e7a;
+    }
+
+    .about p {
+        font-size: 15px;
+        color: #5a6570;
+    }
+
+    @media (max-width: 991px) {
+        .about .about-img img {
+            max-width: 70%;
+        }
+    }
+
+    @media (max-width: 767px) {
+        .about .about-img img {
+            max-width: 90%;
+        }
+    }
+
+    /*--------------------------------------------------------------
+# Services
+--------------------------------------------------------------*/
+    .services .icon-box {
+        padding: 30px;
+        position: relative;
+        overflow: hidden;
+        margin: 0 0 40px 0;
+        background: #fff;
+        box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
+        transition: all 0.3s ease-in-out;
+        border-radius: 15px;
+        text-align: center;
+        border-bottom: 3px solid #fff;
+    }
+
+    .services .icon-box:hover {
+        transform: translateY(-5px);
+        border-color: #ef7f4d;
+    }
+
+    .services .icon i {
+        font-size: 48px;
+        line-height: 1;
+        margin-bottom: 15px;
+        color: #ef7f4d;
+    }
+
+    .services .title {
+        font-weight: 700;
+        margin-bottom: 15px;
+        font-size: 18px;
+    }
+
+    .services .title a {
+        color: #111;
+    }
+
+    .services .description {
+        font-size: 15px;
+        line-height: 28px;
+        margin-bottom: 0;
+    }
+</style>
 
 <body>
     <div id="header"></div>
-    <div id="footer"></div>
-    <script src="../js/script.js"></script>
+
+
+    <!-- ======= Hero Section ======= -->
+    <section id="hero" class="d-flex align-items-center">
+
+        <div class="container">
+            <div class="row gy-4">
+                <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
+                    <h1>Bettter digital experience with Ninestars</h1>
+                    <h2>We are team of talented designers making websites with Bootstrap</h2>
+                    <div>
+                        <a href="#about" class="btn-get-started scrollto">Get Started</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-1 order-lg-2 hero-img">
+                    <img src="assets/img/hero-img.svg" class="img-fluid animated" alt="">
+                </div>
+            </div>
+        </div>
+
+    </section><!-- End Hero -->
+    <section>
+        <br>
+    </section>
+
+        <!-- ======= Services Section ======= -->
+        <section id="services" class="services section-bg">
+            <div class="container" data-aos="fade-up">
+
+                <div class="section-title">
+                    <h2>Services</h2>
+                    <p>Check out the great services we offer</p>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="icon-box">
+                            <div class="icon"><i class="fa fa-user"></i></div>
+                            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+                            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias
+                                excepturi sint occaecati cupiditate</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="icon-box">
+                            <div class="icon"><i class="fa fa-user"></i></div>
+                            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+                            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias
+                                excepturi sint occaecati cupiditate</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="icon-box">
+                            <div class="icon"><i class="fa fa-user"></i></div>
+                            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+                            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias
+                                excepturi sint occaecati cupiditate</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="icon-box">
+                            <div class="icon"><i class="fa fa-user"></i></div>
+                            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+                            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias
+                                excepturi sint occaecati cupiditate</p>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+        </section><!-- End Services Section -->
+
+
+        <div id="footer"></div>
+        <script src="../js/script.js"></script>
 </body>
+
 </html>
