--- a/templates/personal_loan_overview.html
+++ b/templates/personal_loan_overview.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Overview Page</title>
-
-    <link rel="stylesheet" href="../css/style.css">
-    <!-- Jquery for adding header and footer -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js"
-        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"> </script>
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-
-    
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Overview Page</title>
 
 </head>
 
 <script>
-    $(function () {
-        $("#header").load("../header.html");
-        $("#footer").load("../footer.html");
-    });
+  $(function () {
+    $("#header").load("../header.html");
+    $("#footer").load("../footer.html");
+  });
 </script>
-
 <body>
-    <div id="header"></div>
-    <div id="footer"></div>
-    <script src="../js/script.js"></script>
+  <div id="header"></div>
+
+<center><h2>THis is Overview Page</h2></center>
+
+  <div id="footer"></div>
+
 </body>
+
 </html>
