Update Egibility Criteria Page

--- a/templates/personal_loan_egibility_criteria.html
+++ b/templates/personal_loan_egibility_criteria.html
@@ -335,6 +335,52 @@
   }
 
 
+/*--------------------------------------------------------------
+# Features Section
+--------------------------------------------------------------*/
+.features {
+  padding-top: 80px;
+}
+
+.features .features-item+.features-item {
+  margin-top: 100px;
+}
+
+@media (max-width: 640px) {
+  .features .features-item+.features-item {
+    margin-top: 40px;
+  }
+}
+
+.features .features-item h3 {
+  font-weight: 600;
+  font-size: 26px;
+  color: #001973;
+}
+
+.features .features-item ul {
+  list-style: none;
+  padding: 0;
+}
+
+.features .features-item ul li {
+  padding-bottom: 10px;
+}
+
+.features .features-item ul li:last-child {
+  padding-bottom: 0;
+}
+
+.features .features-item ul i {
+  font-size: 20px;
+  padding-right: 4px;
+  color: var(--color-primary);
+}
+
+.features .features-item p:last-child {
+  margin-bottom: 0;
+}
+
 </style>
 
 <body>
@@ -453,6 +499,54 @@
 
     </div>
   </section><!-- End Major Factor Section -->
+
+
+
+  
+    <!-- ======= Features Section ======= -->
+    <section id="features" class="features">
+        <div class="container">
+            
+        <div class="row text-center">
+            <h2 class="text-primary"><b>What's the Personal Loan Eligibility for Salaried Employees?</b></h2>
+            <p>If you are a salaried employee, you can avail a Personal Loan if you fulfil the following eligibility criteria.</p>
+        </div>
+          <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
+  
+            <div class="col-md-5">
+              <img src="../img/features-1.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-md-7">
+             
+              <ul>
+                <li><i class="bi bi-check text-primary"></i>You should be a Resident Citizen of India </li>
+                <li><i class="bi bi-check text-primary"></i>Your age should be between 21 to 68 years </li>
+                <li><i class="bi bi-check text-primary"></i>You should be an employee of a Private Limited Company, Public Limited Company, or an MNC, or Government Sector which may be a Public Sector Undertaking, or a Central or Local Body </li>
+                <li><i class="bi bi-check text-primary"></i>Your work experience should be from 1 to 3 years and above </li>
+                <li><i class="bi bi-check text-primary"></i>Your minimum Credit Score should be 750 </li>
+                <li><i class="bi bi-check text-primary"></i>Your salary should be Rs. 15,000 for a Non-Metro City, and Rs 20,000 for a Metro City </li>
+              </ul>
+            </div>
+          </div><!-- Features Item -->
+  
+          <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
+            <div class="col-md-5 order-1 order-md-2">
+              <img src="../img/features-2.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-md-7 order-2 order-md-1">
+                <ul>
+                    <li><i class="bi bi-check text-primary"></i>You should be a Resident Citizen of India </li>
+                    <li><i class="bi bi-check text-primary"></i>Your age should be between 21 to 68 years </li>
+                    <li><i class="bi bi-check text-primary"></i>You should be an employee of a Private Limited Company, Public Limited Company, or an MNC, or Government Sector which may be a Public Sector Undertaking, or a Central or Local Body </li>
+                    <li><i class="bi bi-check text-primary"></i>Your work experience should be from 1 to 3 years and above </li>
+                    <li><i class="bi bi-check text-primary"></i>Your minimum Credit Score should be 750 </li>
+                    <li><i class="bi bi-check text-primary"></i>Your salary should be Rs. 15,000 for a Non-Metro City, and Rs 20,000 for a Metro City </li>
+                  </ul>
+            </div>
+          </div><!-- Features Item -->
+  
+        </div>
+      </section><!-- End Features Section -->
 
 
   <div id="footer"></div>
