--- a/templates/personal_loan_egibility_criteria.html
+++ b/templates/personal_loan_egibility_criteria.html
@@ -37,6 +37,15 @@
   });
 </script>
 <style>
+.links{
+    width: 100%;
+    background-color: #001973;
+    color: white;
+    padding: 15px;
+}
+.links a{
+    text-decoration: none;
+}
   /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
@@ -387,16 +396,15 @@
   <div id="header"></div>
 
 
+    <div class="links">
+        <a href="/" class="text-light">Home/</a>
+        <a href="" class="text-warning">Personal Loan Eligibility Criteria</a>
+    </div>
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
-      <h1>Welcome to <span>BizLand</span></h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
-      <div class="d-flex">
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
-        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i
-            class="bi bi-play-circle"></i><span>Watch Video</span></a>
-      </div>
+      <h1>Welcome to <span>MoneyTrust</span></h1>
+      <h2>Personal Loan Criteria</h2>
     </div>
   </section><!-- End Hero -->
 
@@ -529,18 +537,26 @@
             </div>
           </div><!-- Features Item -->
   
+
+               
+        <div class="row text-center mt-5">
+            <h2 class="text-primary"><b>How do you qualify for a Personal Loan?</b></h2>
+            <p>The eligibility criteria for a personal loan are quite simple, and your qualification depends on the following criteria.</p>
+        </div>
           <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
             <div class="col-md-5 order-1 order-md-2">
               <img src="../img/features-2.jpg" class="img-fluid" alt="">
             </div>
             <div class="col-md-7 order-2 order-md-1">
                 <ul>
-                    <li><i class="bi bi-check text-primary"></i>You should be a Resident Citizen of India </li>
-                    <li><i class="bi bi-check text-primary"></i>Your age should be between 21 to 68 years </li>
-                    <li><i class="bi bi-check text-primary"></i>You should be an employee of a Private Limited Company, Public Limited Company, or an MNC, or Government Sector which may be a Public Sector Undertaking, or a Central or Local Body </li>
-                    <li><i class="bi bi-check text-primary"></i>Your work experience should be from 1 to 3 years and above </li>
-                    <li><i class="bi bi-check text-primary"></i>Your minimum Credit Score should be 750 </li>
-                    <li><i class="bi bi-check text-primary"></i>Your salary should be Rs. 15,000 for a Non-Metro City, and Rs 20,000 for a Metro City </li>
+                    <li><i class="bi bi-check text-primary"></i>You must be a Resident Citizen of India</li>
+                    <li><i class="bi bi-check text-primary"></i>Your age must be between 21 to 68 years </li>
+                    <li><i class="bi bi-check text-primary"></i>You must be an employee of a Private Limited Company, Public Limited Company, or an MNC if you are a salaried employee. If you are a self-employed person, or a professional, you too are eligible to apply for a personal loan. </li>
+                    <li><i class="bi bi-check text-primary"></i>You should have a minimum Credit Score of 750 </li>
+                    <li><i class="bi bi-check text-primary"></i>Your KYC Documents should be in order </li>
+                    <li><i class="bi bi-check text-primary"></i>You should have an Employee ID Card </li>
+                    <li><i class="bi bi-check text-primary"></i>Must be able to provide last 3 Months Salary Slips</li>
+                    <li><i class="bi bi-check text-primary"></i>You should have 3 months' Salary Bank Account Statement </li>
                   </ul>
             </div>
           </div><!-- Features Item -->
