--- a/templates/personal_loan_egibility_criteria.html
+++ b/templates/personal_loan_egibility_criteria.html
@@ -522,7 +522,7 @@
           <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
   
             <div class="col-md-5">
-              <img src="../img/features-1.jpg" class="img-fluid" alt="">
+              <img src="../img/eligibility-criteria-employee.jpg" class="img-fluid" alt="" style="border-radius: 10px;">
             </div>
             <div class="col-md-7">
              
@@ -545,7 +545,7 @@
         </div>
           <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
             <div class="col-md-5 order-1 order-md-2">
-              <img src="../img/features-2.jpg" class="img-fluid" alt="">
+              <img src="../img/eligibility-criteria-personal-loan.jpg" class="img-fluid" alt="" style="border-radius: 10px;">
             </div>
             <div class="col-md-7 order-2 order-md-1">
                 <ul>
